Mon Feb 19 20:24:50 2001  Jeffrey A Law  (law@cygnus.com)

	* pa.c (move_operand): Accept code to load the address of a
	symbol out of the DLT as a valid move operand.
	(print_operand, case 'A'): New to handle generating a DLT
	reference for a LO_SUM expression.
	* pa.h (EXTRA_CONSTRAINT): Handle 'A' for DLT LO_SUM references.
	* pa.md (movsi, movdi patterns): Allow DLT LO_SUM references.

2001-02-19  Joseph S. Myers  <jsm28@cam.ac.uk>

	* README, cpp.texi, gcc.texi: Update version number to 3.0.
	* cpp.1, gcov.1, gcc.1: Regenerate.

2001-02-19  Richard Henderson  <rth@redhat.com>

	* ifcvt.c (dead_or_predicable): Don't move code if eh regions
	would be disrupted.

Mon Feb 19 10:11:53 2001  Jeffrey A Law  (law@cygnus.com)

	* config.gcc (hppa*64*-*-hpux11*): Add MASK_GAS to
	target_cpu_default.  Remove dead assignment to
	target_cpu_default.

Mon Feb 19 16:46:56 CET 2001  Jan Hubicka  <jh@suse.cz>

	* regclass.c (contains_reg_of_mode): Make global.
	(init_reg_sets): Remove contains_reg_of_mode; take into account
	CLASS_MAX_NREGS when looking for the proper mode.
	(dump_regclass): Dump only classes considered for the pseudo.
	(regclass): Use contains_reg_of_mode.

Mon Feb 19 16:40:45 CET 2001  Jan Hubicka  <jh@suse.cz>

	* gcc.c (do_spec_1): 'n' for printing notices.
	* i386.h (CC1_CPU_SPEC): Notice deprecated options as deprecated.

Mon Feb 19 16:20:04 CET 2001  Jan Hubicka  <jh@suse.cz>

	* reg-stack.c (next_flags_user): Use current_block->end
	(swap_rtx_condition): Look for next user if flags don't die;
	give up on CALL_INSNs; use current_block->end.

2001-02-17  Mark Mitchell  <mark@codesourcery.com>

	* invoke.texi (-fsquangle): Remove documentation.
	(-fname-mangling-version): Likewise.

2001-02-18  Kazu Hirata  <kazu@hxi.com>

	* config/h8300/h8300.md: Update copyright.
	(andsi3): Do not output an extra newline character.

Sun Feb 18 17:03:06 2001  Jeffrey A Law  (law@cygnus.com)

	* Makefile.in (rtlanal.o): Depend on hard-reg-set.h.